update: add scss grayscale, adjust color yaml data

--- a/src/drizzle/data/docs-colors.yaml
+++ b/src/drizzle/data/docs-colors.yaml
@@ -1,32 +1,22 @@
-- name: "White"
-  color: "white"
-- name: "#eee"
-  color: "#eee"
-- name: "#ddd"
-  color: "#ddd"
-- name: "#ccc"
-  color: "#ccc"
-- name: "#bbb"
-  color: "#bbb"
-- name: "#aaa"
-  color: "#aaa"
-- name: "#999"
-  color: "#999"
-- name: "#888"
-  color: "#888"
-- name: "#777"
-  color: "#777"
-- name: "#666"
-  color: "#666"
-- name: "#555"
-  color: "#555"
-- name: "#444"
-  color: "#444"
-- name: "#333"
-  color: "#333"
-- name: "#222"
-  color: "#222"
-- name: "#111"
-  color: "#111"
-- name: "Black"
-  color: "black"
+- property: "gray(100)"
+  color: "#ffffff"
+- property: "gray(90)"
+  color: "#E3E3E3"
+- property: "gray(80)"
+  color: "#CCCCCC"
+- property: "gray(70)"
+  color: "#B0B0B0"
+- property: "gray(60)"
+  color: "#999999"
+- property: "gray(50)"
+  color: "#808080"
+- property: "gray(40)"
+  color: "#696969"
+- property: "gray(30)"
+  color: "#4D4D4D"
+- property: "gray(20)"
+  color: "#363636"
+- property: "gray(10)"
+  color: "#171717"
+- property: "gray(0)"
+  color: "#000000"
