--- a/package.json
+++ b/package.json
@@ -7,24 +7,34 @@
   "scripts": {
     "prestart": "npm run clean",
     "start": "node tasks/start.js",
-    "test": "npm run pa11y && npm run stylelint",
+    "test": "npm run pa11y && npm run stylelint && npm run eslint",
     "clean": "rimraf dist/",
+    "copy": "node tasks/copy.js",
     "server": "node tasks/server.js",
     "watch": "node tasks/watch.js",
     "patterns": "node tasks/patterns.js",
     "sass": "node-sass src/scss/ -o dist/css/ --output-style compressed",
+    "js": "NODE_ENV=production webpack -p",
     "pa11y": "node tasks/pa11y.js",
-    "stylelint": "stylelint 'src/**/*.scss' --syntax scss"
+    "stylelint": "stylelint 'src/**/*.scss' --syntax scss",
+    "eslint": "eslint src/js"
   },
   "engines": {
     "node": "~10.13.0",
     "npm": "~6.4.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.0",
     "@sparkbox/downpour": "^0.0.11",
     "@sparkbox/stylelint-config-sparkbox": "^0.2.0",
     "bluebird": "^3.5.3",
     "chokidar": "^2.0.4",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-sparkbox": "^0.5.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "express": "^4.15.2",
     "lodash": "^4.17.5",
     "node-sass": "^4.5.3",
@@ -33,9 +43,15 @@
     "rimraf": "^2.5.4",
     "shelljs": "^0.8.3",
     "stylelint": "^9.9.0",
-    "stylelint-scss": "^3.4.0"
+    "stylelint-scss": "^3.4.0",
+    "uglifyjs-webpack-plugin": "^2.1.2"
   },
   "devDependencies": {
-    "glob": "^7.1.3"
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-loader": "^8.0.4",
+    "glob": "^7.1.3",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.3.0"
   }
 }
