feat: Add recent improvements

--- a/package.json
+++ b/package.json
@@ -1,34 +1,44 @@
 {
-  "name": "design-system-starter",
+  "name": "YOURNAMEHERE-design-system",
   "version": "0.0.1",
-  "repository": "git@github.com:sparkbox/DesignSystemStarter.git",
+  "repository": "git@github.com:sparkbox/YOURNAMEHERE-design-system.git",
   "author": "Kasey Bonifacio <kasey@heysparkbox.com>",
   "license": "MIT",
   "scripts": {
-    "prestart": "npm run clean",
+    "prestart": "run-p clean node-version",
     "start": "node tasks/start.js",
-    "test": "npm run pa11y && npm run stylelint && npm run eslint",
+    "lint": "run-p pa11y stylelint eslint",
     "clean": "rimraf dist/",
     "copy": "node tasks/copy.js",
     "server": "node tasks/server.js",
     "watch": "node tasks/watch.js",
     "patterns": "node tasks/patterns.js",
+    "svg-sprite": "node tasks/svg-sprite.js",
     "sass": "node-sass src/scss/ -o dist/css/ --output-style compressed",
+    "postsass": "postcss dist/css/*.css -u autoprefixer --no-map -d dist/css",
     "js": "NODE_ENV=production webpack -p",
     "pa11y": "node tasks/pa11y.js",
     "stylelint": "stylelint 'src/**/*.scss' --syntax scss",
-    "eslint": "eslint src/js"
+    "eslint": "eslint src/js",
+    "test": "NODE_ENV=test mocha --require @babel/register './src/js/spec-helpers/main.js' './src/js/**/*-spec.js'",
+    "node-version": "check-node-version --package"
   },
   "engines": {
     "node": "~10.13.0",
-    "npm": "~6.4.1"
+    "npm": "^6.4.1"
   },
   "dependencies": {
+    "@babel/core": "^7.4.0",
     "@babel/polyfill": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "@sparkbox/downpour": "^0.0.11",
     "@sparkbox/stylelint-config-sparkbox": "^0.2.0",
+    "autoprefixer": "^9.4.2",
+    "babel-loader": "^8.0.4",
     "bluebird": "^3.5.3",
+    "check-node-version": "^3.2.0",
     "chokidar": "^2.0.4",
+    "core-js": "^3.1.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-sparkbox": "^0.5.1",
@@ -36,15 +46,21 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "express": "^4.15.2",
+    "express-basic-auth": "^1.2.0",
+    "helper-markdown": "^1.0.0",
     "lodash": "^4.17.5",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.5",
     "pa11y": "^5.1.0",
+    "postcss-cli": "^6.0.1",
     "rimraf": "^2.5.4",
     "shelljs": "^0.8.3",
     "stylelint": "^9.9.0",
     "stylelint-scss": "^3.4.0",
-    "uglifyjs-webpack-plugin": "^2.1.2"
+    "svg-sprite": "^1.5.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
