--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "npm-run-all": "^4.1.5",
     "pa11y": "^5.1.0",
     "postcss-cli": "^6.0.1",
+    "prism-themes": "^1.1.0",
     "rimraf": "^2.5.4",
     "shelljs": "^0.8.3",
     "stylelint": "^9.9.0",
