--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node-version": "check-node-version --package"
   },
   "engines": {
-    "node": "~10.13.0",
+    "node": "^10.13.0",
     "npm": "^6.4.1"
   },
   "dependencies": {
@@ -68,6 +68,7 @@
     "@babel/preset-env": "^7.4.2",
     "babel-loader": "^8.0.4",
     "glob": "^7.1.3",
+    "node": "^10.13.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.3.0"
   }
