--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "pa11y": "node tasks/pa11y.js",
     "stylelint": "stylelint 'src/**/*.scss' --syntax scss",
     "eslint": "eslint src/js",
-    "test": "NODE_ENV=test mocha --require @babel/register './src/js/spec-helpers/main.js' './src/js/**/*-spec.js'",
+    "test": "NODE_ENV=test mocha --require @babel/register './src/js/spec-helpers/main.js' './src/**/*-spec.js'",
     "node-version": "check-node-version --package"
   },
   "engines": {
@@ -28,47 +28,43 @@
     "npm": "^6.4.1"
   },
   "dependencies": {
-    "@babel/core": "^7.4.0",
     "@babel/polyfill": "^7.4.0",
+    "autoprefixer": "^9.4.2",
+    "babel-loader": "^8.0.4",
+    "core-js": "^3.1.3",
+    "express": "^4.15.2",
+    "express-basic-auth": "^1.2.0",
+    "lodash": "^4.17.5",
+    "prism-themes": "^1.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
+    "@babel/register": "^7.6.0",
     "@sparkbox/downpour": "^0.0.11",
     "@sparkbox/stylelint-config-sparkbox": "^0.2.0",
-    "autoprefixer": "^9.4.2",
     "babel-loader": "^8.0.4",
     "bluebird": "^3.5.3",
     "check-node-version": "^3.2.0",
     "chokidar": "^2.0.4",
-    "core-js": "^3.1.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-sparkbox": "^0.5.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "express": "^4.15.2",
-    "express-basic-auth": "^1.2.0",
+    "glob": "^7.1.3",
     "helper-markdown": "^1.0.0",
-    "lodash": "^4.17.5",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.5",
     "pa11y": "^5.1.0",
     "postcss-cli": "^6.0.1",
-    "prism-themes": "^1.1.0",
     "rimraf": "^2.5.4",
     "shelljs": "^0.8.3",
     "stylelint": "^9.9.0",
     "stylelint-scss": "^3.4.0",
     "svg-sprite": "^1.5.0",
     "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.3.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "babel-loader": "^8.0.4",
-    "glob": "^7.1.3",
-    "node": "^10.13.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.3.0"
   }
