--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react": "^7.4.0",
     "glob": "^7.1.3",
     "helper-markdown": "^1.0.0",
+    "node": "^10.13.0",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.5",
     "pa11y": "^5.1.0",
