chore: Add CC Attribution-ShareAlike license
This adds a LICENSE file containing information about the license.

This also adds a note about maybe removing the license, since this project is
used to other projects. People setting up new projects may not want this license
to come along for the ride.

fixes #6

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "repository": "git@github.com:sparkbox/YOURNAMEHERE-design-system.git",
   "author": "Kasey Bonifacio <kasey@heysparkbox.com>",
-  "license": "MIT",
+  "license": "cc-by-sa-4.0",
   "scripts": {
     "prestart": "run-p clean node-version",
     "start": "node tasks/start.js",
