--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "prestart": "run-p clean node-version",
     "start": "node tasks/start.js",
-    "build": "run-p copy sass js svg-sprite",
-    "build:dev": "run-p copy sass:dev js:dev svg-sprite",
+    "build": "run-p copy webpack svg-sprite",
+    "build:dev": "run-p copy webpack:dev svg-sprite",
     "lint": "run-p pa11y stylelint eslint",
     "clean": "rimraf dist/",
     "copy": "node tasks/copy.js",
@@ -16,12 +16,8 @@
     "watch": "node tasks/watch.js",
     "patterns": "node tasks/patterns.js",
     "svg-sprite": "node tasks/svg-sprite.js",
-    "sass": "node-sass src/scss/ -o dist/css/ --output-style compressed",
-    "sass:dev": "node-sass src/scss/ -o dist/css/ --output-style",
-    "postsass": "postcss dist/css/*.css -u autoprefixer --no-map -d dist/css",
-    "postsass:dev": "npm run postsass",
-    "js": "webpack -p --progress --config=webpack.prod.js --mode production",
-    "js:dev": "webpack -p --progress --config=webpack.dev.js --mode development",
+    "webpack": "webpack --color --config=webpack.prod.js",
+    "webpack:dev": "webpack -w --color --progress --config=webpack.dev.js",
     "pa11y": "node tasks/pa11y.js",
     "stylelint": "stylelint 'src/**/*.scss' --syntax scss",
     "eslint": "eslint src/js",
@@ -62,6 +58,7 @@
     "bluebird": "^3.5.3",
     "check-node-version": "^3.2.0",
     "chokidar": "^2.0.4",
+    "css-loader": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-sparkbox": "^0.5.1",
@@ -70,18 +67,22 @@
     "eslint-plugin-react": "^7.4.0",
     "glob": "^7.1.3",
     "helper-markdown": "^1.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node": "^10.13.0",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.5",
     "pa11y": "^5.1.0",
     "postcss-cli": "^6.0.1",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^2.5.4",
+    "sass-loader": "^8.0.0",
     "shelljs": "^0.8.3",
     "stylelint": "^11.1.1",
     "stylelint-scss": "^3.11.1",
     "svg-sprite": "^1.5.0",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.27.1",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-stylish": "^0.1.8"
   }
 }
