--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "stylelint": "stylelint 'src/**/*.scss' --syntax scss",
     "eslint": "eslint src/js",
     "test": "NODE_ENV=test mocha --require @babel/register './src/js/spec-helpers/main.js' './src/**/*-spec.js'",
-    "node-version": "check-node-version --package"
+    "node-version": "check-node-version --package",
+    "lighthouse": "node tasks/lighthouse.js"
   },
   "engines": {
     "node": "^10.13.0",
@@ -47,6 +48,7 @@
     "core-js": "^3.1.3",
     "express": "^4.15.2",
     "express-basic-auth": "^1.2.0",
+    "lighthouse": "^5.6.0",
     "lodash": "^4.17.5",
     "prism-themes": "^1.1.0",
     "webpack-merge": "^4.2.2"
