--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "node-version": "check-node-version --package"
   },
   "engines": {
-    "node": "^10.13.0",
-    "npm": "^6.4.1"
+    "node": "^14",
+    "npm": "^6.14"
   },
   "browserslist": [
     "last 1 major version",
@@ -69,13 +69,12 @@
     "glob": "^7.1.3",
     "helper-markdown": "^1.0.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node": "^10.13.0",
-    "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.5",
     "pa11y": "^5.1.0",
     "postcss-cli": "^6.0.1",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.5.4",
+    "sass": "^1.35.1",
     "sass-loader": "^8.0.0",
     "shelljs": "^0.8.3",
     "stylelint": "^11.1.1",
